# enum-try-as-inner

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: trafficlight.rs
src/: lib.rs
tests/: basic.rs  derive_err.rs  generics.rs  named.rs  snake_case.rs  unnamed.rs
