[package]
name = "enum-try-as-inner"
version = "0.1.0"
authors = ["sinu", "Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

description = """
A proc-macro for deriving inner field accessor functions on enums.
"""

documentation = "https://docs.rs/enum-try-as-inner"
repository = "https://github.com/sinui0/enum-try-as-inner"

readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[[example]]
name = "trafficlight"
path = "examples/trafficlight.rs"
